--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".User.Main2Activity">
+        <activity android:name="MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,7 +24,7 @@
         <activity android:name=".User.UpdateBiodata" />
         <activity android:name=".User.BuatBiodata" />
         <activity android:name=".BaseActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".User.Main2Activity" />
         <activity android:name=".Login.RegisterActivity" />
         <activity android:name=".Login.UserAreaActivity"></activity>
     </application>
